// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuLink can be disabled 1`] = `
<a
  class="fd-menu__item is-disabled fd-has-color-text-4"
  data-fd-menu-item-link-uid="aaa"
>
  title
</a>
`;

exports[`MenuLink renders correctly 1`] = `
<a
  class="fd-menu__item"
  data-fd-menu-item-link-uid="aaa"
>
  Item 1
</a>
`;
